2021.09.07
  * Fixed exception when finding newer version


2021.09.06
  * IMDb: Fixed getting genre tags
  * bB: Fixed science.fiction tag
  * BHD: Fixed --description option
  * BHD: Resolved "500 Server Error" when uploading a .nfo file
  * BHD: Fixed translation of "(E-)AC-3" to "DD(P)" with Atmos
  * Fixed detection of Opus audio codec
  * Print notification to stderr if there is a newer version available


2021.08.12
  * New command: download-location: Find existing file(s) listed in a torrent
    file, hard-link them to the file or directory structure expected by the
    torrent file, and print the appropriate download path (run "upsies dloc -h"
    for more information)
  * Added detection of Dolby Vision in release name and video file
  * bB: Added support for "Dolby Vision" tag
  * bB: Retry login up to 30 times instead of 15 when encountering login bug and
    limit the delay between login attempts at 5 seconds.
  * bB: Short option for --screenshots changed to --ss
  * BHD: Added trackers.bhd.screenshots setting and --screenshots option
  * BHD: Replace "(E-)AC-3" in release name with "DD(+)"
  * Fixed "I/O error" when creating screenshots on Windows


2021.07.13
  * BHD: Disable most edition values except for "Uncut" and "Unrated" to avoid
    the error: "Invalid edition value: Field must be a valid edition value."


2021.07.09
  * Fixed all "/" being removed from mediainfo output when given a path without
    parent directory
  * bB: Fixed submission of Dolby Atmos content
  * Fix crash when stdin is closed


2021.07.06
  * Added support for ptpimg.me (run "upsies set --fetch-ptpimg-apikey EMAIL
    PASSWORD" or "upsies set imghosts.ptpimg.apikey APIKEY")
  * bB: Added --anime option
  * Speedier detection of first video file in season packs
  * Fixed "Error 1064" when scene searching for unescaped "@" in group name


2021.06.22
  * BHD: Fix autodetection of "Commentary" and "DualAudio" tags