@@ -1,3 +1,7 @@
+2021.??.??
+  * BHD: Added --title/-t option that only generates the release name
+
+
 2021.09.07
   * Fixed exception when finding newer version
 
